--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,22 @@
 Package: jbcPlotnine
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Codebase for the POSIT 2024 PLOTNINE CONTEST 
+Version: 1.0.0.0
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Jeff", "Craggy", , "craggyjeff@gmail.com", role = c("aut", "cre"))
+Description: Actual python code for plotnine plot lives in R/plotnine.py
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 URL: https://github.com/JBC-Inc/jbcPlotnine
 BugReports: https://github.com/JBC-Inc/jbcPlotnine/issues
+Imports: 
+    magick,
+    ransid,
+    reticulate,
+Suggests: 
+    remotes (>= 2.5.0),
+    tidyverse,
+    usethis
+Remotes: 
+    r-lib/remotes,
